fix: カバレッジ閾値を全設定で80%に統一
- pyproject.tomlのfail_underを10%から80%に更新
- pytest設定の--cov-fail-underを10%から80%に更新
- update_coverage_badge.pyのthresholdを68%から80%に更新
- 全ての設定ファイルで統一された80%の閾値を使用

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -175,7 +175,7 @@ exclude_also = [
 ]
 show_missing = true
 skip_covered = false
-fail_under = 10  # 段階的に向上: 10% -> 20% -> 35% -> 50% -> 68%
+fail_under = 80  # 現在の目標値: 80%
 precision = 2
 
 [tool.coverage.html]
@@ -198,7 +198,7 @@ addopts = [
     "--cov-report=term-missing",
     "--cov-report=html:htmlcov",
     "--cov-report=xml",
-    "--cov-fail-under=10",
+    "--cov-fail-under=80",
 ]
 testpaths = ["tests"]
 pythonpath = ["src"]
